pk to rbk callout card

--- a/src/pages/dyn/particle_kinematics.astro
+++ b/src/pages/dyn/particle_kinematics.astro
@@ -101,7 +101,17 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
         vectors with respect to different origins and in different
         bases.
       </p>
-    </PrairieDrawCanvas>
+    </PrairieDrawCanvas>   
+    <CalloutContainer slot = "cards">
+      <CalloutCard title = "Heads up!">
+        <p>
+          Similar to particle kinematics, <strong>Rigid body kinematics</strong> also builds on this content later in the course.
+        </p>
+        <p>
+          Learn more about this topic on the <a href = "/sta/rigid_body_kinematics">Rigid body kinematics</a> page.
+        </p>
+      </CalloutCard>
+    </CalloutContainer>
   </SubSection>
   
     <SubSubSection title="Transformation of position vectors" id="Transformation_position_vectors">
