--- a/src/pages/sta/vectors_scalars.astro
+++ b/src/pages/sta/vectors_scalars.astro
@@ -120,7 +120,7 @@ import CalloutContainer from "../../components/CalloutContainer.astro"
           <InlineEquation equation = "m, l, I"/>
         </td>
 	      <td>
-          <InlineEquation equation = "\\vec{F}, F, \\tilde{F}"/><br/>
+          <InlineEquation equation = "\\vec{F}, \\textbf{F}, \\tilde{F}"/><br/>
           unit vector: magnitude of (length) 1<br/>
           <InlineEquation equation = "\\hat{\\imath}, \\hat{F}"/>
         </td>
