--- a/src/pages/sol/material_properties.astro
+++ b/src/pages/sol/material_properties.astro
@@ -316,7 +316,7 @@ Stresses above the plastic limit (<InlineEquation equation="\\sigma_Y < \\sigma"
 <CalloutContainer slot="cards">
     <CalloutCard title="Heads up!">
         <p>
-           <strong> Strain Energy</strong> builds on this content in Engineering Materals.
+           <strong> Strain Energy</strong> builds on this content in Engineering Materials.
         </p>
         <p>
             Deformation does work on the material: equal to internal strain energy (by energy conservation).
@@ -333,7 +333,7 @@ Stresses above the plastic limit (<InlineEquation equation="\\sigma_Y < \\sigma"
 
     <CalloutCard title="Heads up!">
         <p>
-            <strong>Fatigue</strong> builds on this content in Engineering Materals and Mechanical Design.                
+            <strong>Fatigue</strong> builds on this content in Engineering Materials and Mechanical Design.                
         </p>
         <p>
             <Image src='/sol/material_properties/SN Curve.png' width='4'>SN curve examples</Image>
