PVA callout card

--- a/src/pages/dyn/particle_kinematics.astro
+++ b/src/pages/dyn/particle_kinematics.astro
@@ -108,7 +108,7 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
           Similar to particle kinematics, <strong>Rigid body kinematics</strong> also builds on this content later in the course.
         </p>
         <p>
-          Learn more about this topic on the <a href = "/sta/rigid_body_kinematics">Rigid body kinematics</a> page.
+          Learn more about this topic on the <a href = "/dyn/rigid_body_kinematics">Rigid body kinematics</a> page.
         </p>
       </CalloutCard>
     </CalloutContainer>
@@ -328,6 +328,16 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
 
     </tbody>
 </DisplayTable>
+  <CalloutContainer slot = "cards">
+    <CalloutCard title = "Heads up!">
+      <p>
+        <strong>Position velocity acceleration</strong> builds on this content in Mechanism design.
+      </p>
+      <p>
+        Position, Velocity, Acceleration (PVA) analysis is used to analytically determine the motion of a mechanism. Position determines the configuration. Velocity is used to understand the kinetic energy and momentum. Acceleration is used to understand the forces. The known geometry, initial configurations, and PVA data of one link determines the PVA data for the other links. Learn more about this topic on the <a href = "/md/Position_Velocity_Acceleration">Position velocity acceleration</a> page.
+      </p>
+    </CalloutCard>
+  </CalloutContainer>
 </SubSubSection>
 
 
