--- a/src/pages/dyn/particle_kinematics.astro
+++ b/src/pages/dyn/particle_kinematics.astro
@@ -334,7 +334,7 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
         <strong>Position velocity acceleration</strong> builds on this content in Mechanism design.
       </p>
       <p>
-        Position, Velocity, Acceleration (PVA) analysis is used to analytically determine the motion of a mechanism. Position determines the configuration. Velocity is used to understand the kinetic energy and momentum. Acceleration is used to understand the forces. The known geometry, initial configurations, and PVA data of one link determines the PVA data for the other links. Learn more about this topic on the <a href = "/md/Position_Velocity_Acceleration">Position velocity acceleration</a> page.
+        Position, Velocity, Acceleration (PVA) analysis is used to analytically determine the motion of a mechanism. Position determines the configuration of the mechanism, velocity determines the kinetic energy and momentum, and acceleration determines the forces. The known geometry, initial configurations, and PVA data of one link determines the PVA data for the other links. Learn more about this topic on the <a href = "/md/Position_Velocity_Acceleration">Position velocity acceleration</a> page.
       </p>
     </CalloutCard>
   </CalloutContainer>
