212 Navtree // sentencing case (#254)
* work navtree // sentence case

made every subsection sentence case
also fixed navtree indenting
also removed application subsection (nothing was there)

* sentence case

fixed capitalization in drop down menu

* rolling navtree // sentencing tense

fixed navtree indentation
made everything into sentencing tense
removed application subsection (nothing is there)

* rb kinetics navtree // sentence case

* rigid body kinematics navtree // s case

made everything sentencing case
made navtree consistent

* particle kinetics navtree/s case

* p kinematics navtree // s case

* vector calc navtree//s case

* vectors navtree//sentence case

* merge fix

* merge fix

* merge fix

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -393,7 +393,7 @@ const path = Astro.url.pathname;
                                     <li><a href="/dyn/rigid_body_kinematics?origin=sidebar" style="break-inside: avoid;">Rigid body kinematics</a></li>
                                     <li><a href="/dyn/rigid_body_kinetics?origin=sidebar">Rigid body kinetics</a></li>
                                     <li><a href="/dyn/contact_and_rolling?origin=sidebar">Contact And rolling</a></li>
-                                    <li><a href="/dyn/work_and_energy?origin=sidebar">Work And energy</a></li>
+                                    <li><a href="/dyn/work_and_energy?origin=sidebar">Work and energy</a></li>
                                 </ol>
                         </section>
                     </div>
