--- a/src/pages/dyn/rigid_body_kinematics.astro
+++ b/src/pages/dyn/rigid_body_kinematics.astro
@@ -63,8 +63,9 @@ import DisplayTable from "../../components/DisplayTable.astro"
 
 
 
-<Section title="Rigid bodies" id="rigid_bodies">
+<Section title="Rigid body kinematics"/>
 
+  <SubSection title = "Rigid bodies" id = "rigid_bodies">
     A <em>rigid body</em> is an extended area of material that
           includes all the points inside it, and which moves so that
           the distances and angles between all its points remain
@@ -122,7 +123,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
         no extended body can be exactly rigid. Despite this, these
         are very useful models for mechanics and dynamics.
       </p>
-</Section>
+  </SubSubsection>
 
 <SubSection title="Rotating rigid bodies" id="rotating_rigid_bodies">
 
@@ -845,7 +846,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
 </SubSection>
 
 
-<SubSection id="constraint_forces" title="Constraint forces">
+<SubSubSection id="constraint_forces" title="Constraint forces">
 
   <p>
     If an object is constrained to move in a specific direction, by Newton's second law, there must be
@@ -1096,7 +1097,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
 </Example>
 
 
-</SubSection>
+</SubSubSection>
 
 <SubSection title="Gears"  id="gears">
 
@@ -1113,7 +1114,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
 	
 
 </SubSection> 
-<SubSection title="Standard sign convention"  id="sign_convention">
+<SubSubSection title="Standard sign convention"  id="sign_convention">
 
     <Image src="/dyn/rigid_body_kinematics/GearsSignConvention.png" width="6"></Image>
 	
@@ -1142,7 +1143,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
 </Example>
 
 	
-</SubSection>
+</SubSubSection>
 
 <SubSubSection title="Acceleration in contact (no slip)"  id="acce_contact_noslip_convention">
 
@@ -1386,7 +1387,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
   </CalloutContainer>
 </SubSection>
 
-<SubSubSection title="Knee Joint"  id="knee_joint">
+<SubSubSection title="Knee joint"  id="knee_joint">
     <p>
       The human knee joint is a type of biological <a
       href="http://en.wikipedia.org/wiki/Hinge_joint">hinge</a>,
