heads up cards edits

--- a/src/pages/dyn/particle_kinematics.astro
+++ b/src/pages/dyn/particle_kinematics.astro
@@ -105,10 +105,11 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
     <CalloutContainer slot = "cards">
       <CalloutCard title = "Heads up!">
         <p>
-          Similar to particle kinematics, <strong>Rigid body kinematics</strong> also builds on this content later in the course.
+          Similar to particle kinematics, <strong><a href = "/dyn/rigid_body_kinematics">rigid body kinematics</a></strong> also builds on this content later in the course.
         </p>
+        <PrairieDrawCanvas id = "rkg-fr-c" height = "250" width = "250"/>
         <p>
-          Learn more about this topic on the <a href = "/dyn/rigid_body_kinematics">Rigid body kinematics</a> page.
+          Rigid body kinematics examines the velocity and acceleration of particles on the same rigid body.
         </p>
       </CalloutCard>
     </CalloutContainer>
@@ -331,10 +332,11 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
   <CalloutContainer slot = "cards">
     <CalloutCard title = "Heads up!">
       <p>
-        <strong>Position velocity acceleration</strong> builds on this content in Mechanism design.
+        <strong><a href = "/md/Position_Velocity_Acceleration">Position velocity acceleration</a></strong> builds on this content in Mechanism design.
       </p>
+      <Image src = "/md/Position_Velocity_Acceleration/Vector_loop_1.png" width = "5"/>
       <p>
-        Position, Velocity, Acceleration (PVA) analysis is used to analytically determine the motion of a mechanism. Position determines the configuration of the mechanism, velocity determines the kinetic energy and momentum, and acceleration determines the forces. The known geometry, initial configurations, and PVA data of one link determines the PVA data for the other links. Learn more about this topic on the <a href = "/md/Position_Velocity_Acceleration">Position velocity acceleration</a> page.
+        Position, Velocity, Acceleration (PVA) analysis is used to analytically determine the motion of a mechanism. Position determines the configuration of the mechanism, velocity determines the kinetic energy and momentum, and acceleration determines the forces. The known geometry, initial configurations, and PVA data of one link determines the PVA data for the other links.
       </p>
     </CalloutCard>
   </CalloutContainer>
