--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -147,7 +147,7 @@ div.grid{
         </div>
         <div id="fundamentals">
             <div class="d-flex justify-content-between flex-row title-section">
-                <h3 class="">MechSE fundamentals</h3>
+                <h3 class="">Mechanical engineering fundamentals</h3>
                 <div class="form-check form-switch simp-switch">
                     <input class="form-check-input simp-btn" type="checkbox" role="switch" onchange="toggle_simplified_view(this);">
                     <label class="form-check-label" style="text-wrap: nowrap;">Simplified view:</label>
