rolling on curved surfaces changes (#241)
* rolling on curved surfaces changes

-adjusts the prairiedraw image to use the I, J, basis instead of the T-N basis
-reorganizes page to show I, J basis and then the T-N basis after
-adds blurb to explain T-N usage

* removed t-n approach

* removed rko-ew

--- a/src/pages/dyn/contact_and_rolling.astro
+++ b/src/pages/dyn/contact_and_rolling.astro
@@ -253,15 +253,6 @@ import DisplayEquationCustom from "../../components/DisplayEquationCustom.astro"
 
     <PrairieDrawCanvas id="rko-fc-c" width="600" height="600"></PrairieDrawCanvas>
 
-    <DisplayEquation id="rko-eg" derivation='True' background="True" title="Geometric quantities for rolling on a curved surface." equation="\\begin{aligned} \\left.\\begin{aligned} R &amp;= \\rho - r \\\\ \\vec{\\omega} &amp;= -\\omega \\,\\hat{e}_b \\\\ \\vec{\\alpha} &amp;= -\\alpha \\,\\hat{e}_b \\end{aligned}\\right\\} &amp; \\text{ when rolling on the inside of a curved surface} \\\\[1em] \\left.\\begin{aligned} R &amp;= \\rho + r \\\\ \\vec{\\omega} &amp;= \\omega \\,\\hat{e}_b \\\\ \\vec{\\alpha} &amp;= \\alpha \\,\\hat{e}_b \\end{aligned}\\right\\} &amp; \\text{ when rolling on the outside of a curved surface} \\end{aligned}"> 
-            These formulas are all choices of sign conventions for
-            <InlineEquation equation="\\omega" /> and <InlineEquation equation="\\alpha" />, and definitions of <InlineEquation equation="R" />. Figure <a
-            href="#rko-fc">#rko-fc</a> shows the appropriate
-            geometry. Note that <InlineEquation equation="\\omega" /> and <InlineEquation equation="\\alpha" /> are defined
-            with positive values corresponding to motion in the
-            tangential direction.
-    </DisplayEquation>
-
     <Warning id="rko-wr" title="Radii of curvature \\(\\rho\\) and \\(r\\) may not be constant.">
       <p>
         The radius of curvature <InlineEquation equation="\\rho" /> of the surface may be
@@ -278,81 +269,13 @@ import DisplayEquationCustom from "../../components/DisplayEquationCustom.astro"
       depends on the radius of curvature of the surface:
     </p>
 
-    <DisplayEquation title="Center velocity and acceleration while rolling on a curved surface (Tangential-Normal Basis)." id="rko-ec" equation="\\begin{aligned}\\vec{v}_C &amp;= r \\omega \\,\\hat{e}_t \\\\\\vec{a}_C &amp;= r \\alpha \\,\\hat{e}_t+ \\frac{(r\\omega)^2}{R} \\,\\hat{e}_n\\end{aligned}" background="true" derivation="true">
-      <p>
-        The two configurations shown in Figure <a
-        href="#rko-eg">#rko-eg</a> must be considered
-        individually. We will do the derivation for the case of
-        rolling inside (the left diagram), as the
-        rolling-outside case is very similar, but with different
-        signs.
-      </p>
-
-      <p>
-        We begin with the point of contact \(P\), which has zero
-        velocity and so it is the instantaneous center of the
-        body. Using <a href="rkg.html#rkg-er">#rkg-er</a> with
-        the expressions <a href="#rko-eg">#rko-eg</a> thus gives
-        the velocity expression:
-
-        <DisplayEquation equation="\\begin{aligned}        \\vec{v}_C &amp;= \\vec{v}_P + \\vec{\\omega} \\times \\vec{r}_{PC} \\\\        &amp;= (-\\omega\\,\\hat{e}_b) \\times r\\,\\hat{e}_n \\\\        &amp;= r \\omega \\,\\hat{e}_t.        \\end{aligned}" />
-
-
-        Differentiating this velocity and using <a
-        href="rkt.html#rkt-ed">#rkt-ed</a> gives the
-        acceleration:
-
-        <DisplayEquation equation="\\begin{aligned}        \\vec{a}_C &amp;= r \\dot{\\omega} \\,\\hat{e}_t        + r \\omega \\,\\dot{\\hat{e}}_t \\\\        &amp;= r \\alpha \\,\\hat{e}_t        + r \\omega \\frac{\\dot{s}}{\\rho} \\,\\hat{e}_n.        \\end{aligned}" />
-
-
-        To replace <InlineEquation equation="\\dot{s}" /> in this acceleration expression, we
-        first consider the instantaneous center \(M\), which moves
-        along the surface with speed <InlineEquation equation="\\dot{s}" /> and tangential
-        acceleration <InlineEquation equation="\\ddot{s}" />. Thus from <a
-        href="rkt.html#rkt-ev">#rkt-ev</a>:
-
-        <DisplayEquation equation="\\begin{aligned}        \\vec{v}_M &amp;= \\dot{s} \\,\\hat{e}_t.        \\end{aligned}" />
-
-
-        We can now compute the velocity of \(C\) from \(M\), as
-        follows. Note that we cannot use equation <a
-        href="rkg.html#rkg-er">#rkg-er</a> because \(M\) and \(C\)
-        are not fixed to the same body (\(M\) is not fixed to the
-        body). Thus:
-
-        <DisplayEquation equation="\\begin{aligned}        \\vec{r}_C &amp;= \\vec{r}_M + r\\,\\hat{e}_n \\\\        \\vec{v}_C &amp;= \\vec{v}_M + r\\,\\dot{\\hat{e}}_n \\\\        &amp;= \\dot{s}\\,\\hat{e}_t - r \\frac{\\dot{s}}{\\rho} \\,\\dot{\\hat{e}}_t \\\\        &amp;= \\frac{(\\rho - r)}{\\rho} \\dot{s} \\,\\hat{e}_t \\\\        &amp;= \\frac{R}{\\rho} \\dot{s} \\,\\hat{e}_t.        \\end{aligned}" />
-
-
-        Comparing this expression for <InlineEquation equation="\\vec{v}_C" /> to the one
-        above, we see that:
-
-        <DisplayEquation equation="\\begin{aligned}        r \\omega &amp;= \\frac{R}{\\rho} \\dot{s} \\\\        \\dot{s} &amp;= \\frac{\\rho r}{R} \\omega.        \\end{aligned}" />
-
-
-        This expression for <InlineEquation equation="\\dot{s}" /> can be substituted back
-        into our earlier equation for <InlineEquation equation="\\vec{a}_C" />, giving:
-
-        <DisplayEquation equation="\\begin{aligned}        \\vec{a}_C &amp;= r \\alpha \\,\\hat{e}_t        + r \\omega \\frac{1}{\\rho} \\left( \\frac{\\rho r}{R} \\omega \\right) \\,\\hat{e}_n \\\\        &amp;= r \\alpha \\,\\hat{e}_t        + \\frac{(r \\omega)^2}{R} \\,\\hat{e}_n.        \\end{aligned}" />
-
-
-        The case of rolling on the outside of the curved surface
-        (the right diagram in Figure <a
-        href="#rko-fc">#rko-fc</a>) is similar to the above but
-        with the different sign conventions from <a
-        href="#rko-eg">#rko-eg</a>. The final expressions in <a
-        href="#rko-ec2">#rko-ec</a> apply to rolling on both the
-        inside and outside.
-      </p>
-
-    </DisplayEquation>
-
     <DisplayEquationCustom title="Center velocity and acceleration while rolling on a curved surface (I-J Basis)." id="rko-ec2" background="true" derivation="true">
 
       <InlineEquation equation="\\text{Rolling on the inside}:" />
-      <DisplayEquation equation="\\begin{aligned}\\vec{v}_C &amp;= -r \\omega_z \\,\\hat{I}\\\\\\vec{a}_C &amp;= -r \\alpha_z \\,\\hat{I}+ \\frac{(r\\omega)^2}{R} \\,\\hat{J}\\end{aligned}" />
+      <DisplayEquation equation="\\begin{aligned} R &amp;= \\rho - r \\\\ \\vec{v}_C &amp;= -r \\omega_z \\,\\hat{I}\\\\\\vec{a}_C &amp;= -r \\alpha_z \\,\\hat{I}+ \\frac{(r\\omega)^2}{R} \\,\\hat{J}\\end{aligned}" />
 
       <InlineEquation equation="\\text{Rolling on the outside}:" />
-      <DisplayEquation equation="\\begin{aligned}\\vec{v}_C &amp;= -r \\omega_z \\,\\hat{I}\\\\\\vec{a}_C &amp;= -r \\alpha_z \\,\\hat{I}- \\frac{(r\\omega)^2}{R} \\,\\hat{J}\\end{aligned}" />
+      <DisplayEquation equation="\\begin{aligned} R &amp;= \\rho + r \\\\ \\vec{v}_C &amp;= -r \\omega_z \\,\\hat{I}\\\\\\vec{a}_C &amp;= -r \\alpha_z \\,\\hat{I}- \\frac{(r\\omega)^2}{R} \\,\\hat{J}\\end{aligned}" />
 
 
       <div slot="derivation">
@@ -366,25 +289,6 @@ import DisplayEquationCustom from "../../components/DisplayEquationCustom.astro"
         </p>
       </div>
     </DisplayEquationCustom>
-
-    <p>
-      The angular velocity of the rolling rigid body can be
-      related to the derivative <InlineEquation equation="\\dot{s}" /> of the distance traveled
-      on the surface as follows. In the special case of a
-      perfectly circular surface, the angular acceleration also
-      has a simple relationship with <InlineEquation equation="\\ddot{s}" />.
-    </p>
-    
-    <DisplayEquation equation="\\begin{aligned}\\omega &amp;= \\frac{R}{\\rho r} \\dot{s} \\quad \\text{on any curved surface} \\\\\\alpha &amp;= \\frac{R}{\\rho r} \\ddot{s} \\quad \\text{on a circular surface}\\end{aligned}" id="rko-ew" background="true" derivation="true" title="Distance-angular relationships for rolling on a curved surface.">
-      <p>
-        See the derivation for <a href="#rko-ec">#rko-ec</a>,
-        where the relationship between \(\omega\) and <InlineEquation equation="\\dot{s}" /> is
-        obtained. If the surface is exactly circular then by
-        definition $\rho$ and \(r\) are constant, so
-        differentiating the angular velocity expression
-        immediately gives the angular acceleration equation.
-      </p>
-    </DisplayEquation>
 
     <p>
       Just as with rolling on a flat surface, when a rigid body
