--- a/src/pages/sta/force_systems.astro
+++ b/src/pages/sta/force_systems.astro
@@ -87,7 +87,7 @@ The magnitude of the equivalent force <InlineEquation equation='F_R' /> is the a
 <CalloutContainer slot="cards">
   <CalloutCard title="Heads up!">
     <p>
-      <strong><a href = "/sta/hydrostatic_fluid_pressure/#fluid_pressure_FBD">Pressure, distributed loads, and free body diagrams</a></strong> builds on this content in Statics.
+      <strong><a href = "/sta/hydrostatic_fluid_pressure/#fluid_pressure_FBD">Hydrostatic fluid pressure</a></strong> builds on this content in Statics.
     </p>
   </CalloutCard>
 </CalloutContainer>
