--- a/src/pages/sta/hydrostatic_fluid_pressure.astro
+++ b/src/pages/sta/hydrostatic_fluid_pressure.astro
@@ -72,7 +72,7 @@ For an incompressible fluid (density <InlineEquation equation='\\rho' />) at res
 
 <CalloutContainer slot = "cards">
 	<CalloutCard title = "Review?">
-		<p> Hydrostatic fluid pessure is a type of distributed load. If you need a refresher on distributed loads, see the <a href="https://www.mechref.org/sta/force_systems/?origin=sidebar#distributed_loads">distributed Loads reference page</a>. 
+		<p> Hydrostatic fluid pessure is a type of distributed load. If you need a refresher on distributed loads, see the <a href="https://www.mechref.org/sta/force_systems/?origin=sidebar#distributed_loads">distributed loads reference page</a>. 
 		</p>
 	</CalloutCard>
 </CalloutContainer>
