internal forces rework

--- a/src/pages/sta.astro
+++ b/src/pages/sta.astro
@@ -22,7 +22,7 @@ import "../../public/static/css/course_home_pages.css"
       <li><a href="/sta/reaction_forces?origin=coursemenu">Reaction forces</a></li>
       <li><a href="/sta/trusses?origin=coursemenu">Trusses</a></li>
       <li><a href="/sta/frames_and_machines?origin=coursemenu">Frames and machines</a></li>
-      <li><a href="/sta/shear_moment_diagrams?origin=coursemenu">Internal forces</a></li>
+      <li><a href="/sta/internal_forces?origin=coursemenu">Internal forces</a></li>
       <li><a href="/sta/friction?origin=coursemenu">Friction</a></li>
       <li><a href="/sta/centers_of_mass?origin=coursemenu">Center of mass</a></li>
       <li><a href="/sta/hydrostatic_fluid_pressure?origin=coursemenu">Hydrostatic fluid pressure</a></li>
