--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -367,7 +367,7 @@ const path = Astro.url.pathname;
                             <li><a href="/sta/reaction_forces?origin=sidebar">Reaction forces</a></li>
                             <li><a href="/sta/trusses?origin=sidebar">Trusses</a></li>
                             <li><a href="/sta/frames_and_machines?origin=sidebar">Frames and machines</a></li>
-                            <li><a href="/sta/shear_moment_diagrams?origin=sidebar">Internal forces</a></li>
+                            <li><a href="/sta/internal_forces?origin=sidebar">Internal forces</a></li>
                             <li><a href="/sta/friction?origin=sidebar">Friction</a></li>
                             <li><a href="/sta/centers_of_mass?origin=sidebar">Center of mass</a></li>
                             <li><a href="/sta/hydrostatic_fluid_pressure?origin=sidebar">Hydrostatic fluid pressure</a></li>
